fix(backend): resolve SonarQube round 7 - parameter counts, empty catches, Collectors.toList()
- InvoicePdfResponseDTO: override equals/hashCode/toString for byte[] content
- DevSyntheticDataSeeder: introduce StaffSeedParams record to reduce createStaff (8→2) and ensureStaff (9→3) parameters
- ActingContextArgumentResolver: document empty catch block for non-UUID header value
- RenderDatabaseEnvironmentPostProcessor: introduce ParsedDatabaseCredentials record to reduce populateOverrides (8→3) parameters
- GlobalExceptionHandler: wrap log.error invocation conditionally
- DigitalSignatureMapper: return List.of() instead of null, replace Collectors.toList() with Stream.toList()
- DischargeSummaryMapper: replace 3x Collectors.toList() with Stream.toList()
- EncounterWorkspaceMapper: remove unused parameters (visitType, locale, encounterId)
- ImagingOrderMapper: replace Collectors.toList() with Stream.toList()
- ImagingReportMapper: replace 3x Collectors.toList() with Stream.toList()
- InvoiceItemMapper: document empty catch block for staff name resolution fallback
- StaffAvailabilityMapper: remove unused 'department' parameter
- TreatmentMapper: add braces around single-line if-return for multi-line block safety
- TreatmentPlanMapper: replace 3x Collectors.toList() with Stream.toList()
- UltrasoundMapper: replace 2x Collectors.toList() with Stream.toList()